@@ -64,9 +64,11 @@ this:
 Or on systems that have the `env' program, you can do it like this:
      env CPPFLAGS=-I/usr/local/include LDFLAGS=-s ./configure
 
-For Windows systems using the Visual C++ compiler:
-
+On Windows systems using the Visual C++ compiler:
     ./configure --prefix=c:/usr/local CC=cl CFLAGS=-GD
+
+On Windows systems using the MinGW compiler:
+    PATH=/cygdrive/c/MinGW/bin:$PATH ./configure --prefix=c:/usr/local
 
 Compiling For Multiple Architectures
 ====================================
