@@ -1,3 +1,7 @@
+2003-04-01  Gert-Jan Paulissen  <g.paulissen@chello.nl>
+
+        * Makefile.am: Interface version info changed to 1:0:0.
+
 2003-03-10  Gert-Jan Paulissen  <g.paulissen@chello.nl>
 
         * Makefile.am: AM_CPPFLAGS used instead of INCLUDES
